--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,20 @@ body {
   }
 
 input {
+    height: 45px;
+    border-radius: 5px;
+    font-size: 20px;
+    outline: none;
+    padding: 10px;
+}
+
+label {
+    height: 40px;
+}
+
+button {
     height: 70px;
     border-radius: 5px;
     font-size: 20px;
     outline: none
-}
-label {
-    height: 40px;
 }
