--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,29 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+* {
+  font-size: 14px;
+  font-family: "Whitney SSm A", "Whitney SSm B", "Avenir", "Segoe UI", "Ubuntu",
+    "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+button {
+  background-color: whitesmoke;
+  border-bottom-color: #b4bac5;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08),
+    inset 0 -1px 4px rgba(151, 159, 175, 0.2);
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 10px 15px;
+  font-weight: 500;
+  color: #39424e;
+  outline: none;
+  margin: 5px;
+}
+
+button:disabled,
+button[disabled] {
+  background-color: #cccccc;
+  color: #aaaaaa;
+}
