--- a/src/routes/app/components/styles.css
+++ b/src/routes/app/components/styles.css
@@ -19,11 +19,25 @@
   border-bottom: 1px solid #e0e0e0;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  width: 100%;
+}
+.header-menu {
+  flex: 3;
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+.header-menu li {
+  margin-left: 30px;
+  margin-top: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }
 .header-dropdown {
   position: relative;
-  display: inline-block;
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
   padding: 20px;
   cursor: pointer;
 }
