--- a/src/routes/auth/components/auth.css
+++ b/src/routes/auth/components/auth.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  justify-content: center;
   align-items: center;
 }
 
 .auth-container h1 {
   margin: 50px;
+  margin-top: 100px;
   font-size: 30px;
 }
